--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,12 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
+    <button
+      class="btn btn-success"
+      style="margin-top: 20px"
+      (click)="onNewRecipe()"
+    >
+      New Recipe
+    </button>
   </div>
 </div>
 <hr />
